# sjmb-matrix

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  install.sh
config/: sjmb_matrix.json
src/: config.rs  db_util.rs  lib.rs  matrixbot.rs  str_util.rs
