[package]
name = "sjmb_matrix"
version = "1.1.3"
edition = "2021"
resolver = "2"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
description = "My Matrix bot"
repository = "https://github.com/sjm42/sjmb-matrix"
readme = "README.md"
keywords = ["matrix", "bot"]
license = "MIT OR Apache-2.0"


#[dependencies.matrix-sdk]
#aquamarine = "0.5"

[dependencies]
anyhow = "1"
chrono = "0"
chrono-tz = "0"
clap = { version = "4", features = ["derive"] }
env_logger = "0"
futures = "0"
http = "1"
log = "0"
# matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk.git", default-features = false, features = ["e2e-encryption","anyhow","rustls-tls","sqlite"] }
matrix-sdk = { git = "https://github.com/sjm42/matrix-rust-sdk.git", branch = "fix-aquamarine-dep", default-features = false, features = [
    "e2e-encryption",
    "anyhow",
    "rustls-tls",
    "sqlite",
] }
# matrix-sdk = { version = "0.7", default-features = false, features = ["e2e-encryption","anyhow","rustls-tls","sqlite"] }

once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = { version = "3", features = ["full"] }
sqlx = { version = "0.7", features = [
    "macros",
    "migrate",
    "runtime-tokio-rustls",
    "sqlite",
] }
tokio = { version = "1", features = ["full"] }


[build-dependencies]
build-data = "0"


[profile.release]
lto = true
opt-level = 3

# EOF
