[package]
name = "sjmb_matrix"
version = "1.4.0"
edition = "2024"
resolver = "2"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
description = "My Matrix bot"
repository = "https://github.com/sjm42/sjmb-matrix"
readme = "README.md"
keywords = ["matrix", "bot"]
license = "MIT OR Apache-2.0"


#[dependencies.matrix-sdk]
#aquamarine = "0.5"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk.git", default-features = false, features = [
    "e2e-encryption",
    "anyhow",
    "bundled-sqlite",
] }
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = { version = "3", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = [
    "derive",
    "runtime-tokio-rustls",
    "postgres",
] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"


[build-dependencies]
build-data = "0.3"


[profile.release]
lto = "fat"
opt-level = 3

# EOF
